--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI = "mongodb+srv://akash:akash123@cluster0.24bmwfn.mongodb.net/VDonate"
 MONGO_URI_TEST = "mongodb+srv://akash:akash123@cluster0.24bmwfn.mongodb.net/test"
 SECRET = "akash"
+MAIL_PASSWORD = "gvaqaxjfnfcodscf"
