--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "chai": "^4.3.7",
+    "chromedriver": "^119.0.1",
     "dayjs": "^1.11.10",
+    "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -24,6 +28,7 @@
     "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "selenium-webdriver": "^4.11.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
@@ -31,7 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "dev": "nodemon index.js",
-    "test": "react-scripts test",
+    "test": "mocha --no-timeouts --reporter mochawesome --require mochawesome/register",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
