--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "validator": "^13.11.0"
   },
   "name": "backend",
   "version": "1.0.0",
